# cmake-tutorials

./: CMakeLists.txt
cmake/: Config.h.in
include/: Config.h
src/: hello_world.cc
utils/: CMakeLists.txt  mysqrt.cc
